deployment/manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: checkrunner-api
  labels:
    team: datateam
    app: checkrunner
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    run: checkrunner-api
  type: NodePort
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: checkrunner-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
  - http:
      paths:
        - backend:
            serviceName: checkrunner-api
            servicePort: 5000
          path: "/checkrunner(/|$)(.*)"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkrunner-api
  labels:
    team: datateam
    app: checkrunner
spec:
  selector:
    matchLabels:
      run: checkrunner-api
  replicas: 2
  template:
    metadata:
      labels:
        team: datateam
        app: checkrunner
        run: checkrunner-api
    spec:
      containers:
      - name: checkrunner-api-container
        image: echogl-datateam-docker-dev-local.jfrog.io/checkrunner-api:70507-5e6e653d545a9ac612aa2f3b87bfc84cc738d524
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "1G"
            cpu: "500m"
          limits:
            memory: "1.2G"
            cpu: "800m"
        livenessProbe:
          httpGet:
            path: /alive
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 4
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 4
          timeoutSeconds: 3
      imagePullSecrets:
        - name: artifactory-cloud-datateam
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      terminationGracePeriodSeconds: 30
